--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,28 @@ repositories {
 }
 
 dependencies {
+    // ✅ Spring Boot Web
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // 🔐 Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // ✅ JPA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // ✅ MySQL Connector
+    implementation 'com.mysql:mysql-connector-j'
+
+    // ✅ Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // ✅ JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Jackson 기반 파서
+
+    // ✅ 테스트
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
